memory adjustments